# AllLabs

./: CMakeLists.txt
listlib/: CMakeLists.txt  THeadList.h  TList.h  TNode.h
polinom/: CMakeLists.txt  polinom.cpp
polinomlib/: CMakeLists.txt  TMonom.h  TPolinom.h
polinomtest/: CMakeLists.txt  test_polinom.cpp
postfix/: CMakeLists.txt  postfix.cpp
postfixlib/: CMakeLists.txt  Postfix.cpp  Postfix.h
postfixtest/: CMakeLists.txt  test_expression.cpp
queue/: CMakeLists.txt  queue_sample.cpp
queueinterface/: CMakeLists.txt  MyForm.h
queuelib/: CMakeLists.txt  MyQueue.h
queuetest/: CMakeLists.txt  test_queue.cpp
stack/: CMakeLists.txt  stack.cpp
stacklib/: CMakeLists.txt  MyStack.h
stacktest/: CMakeLists.txt  test_stack.cpp
